@@ -117,7 +117,7 @@
    </div>
    <div class="para _5">
     <p>
-     <span class="i"><strong>Latest release:</strong></span> FParsec 0.9.2, 2012‒03‒09, <a
+     <span class="i"><strong>Latest release:</strong></span> FParsec 1.0.0, 2012‒07‒19, <a
      href="https://bitbucket.org/fparsec/main/downloads">Download</a>, <a href="about/changelog.html">Changes</a>
     </p>
    </div>
